--- a/test-output/html/output.html
+++ b/test-output/html/output.html
@@ -15,11 +15,23 @@
   </p>
 
   <div id="log">
-                  [INFO ] [2022-12-01 15:48:44,666] Pre-Condition - Step 01: Navigate to Login Button<br/>
+                  [INFO ] [2022-12-07 14:11:13,404] Register - Step 01: Click to Register link<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-12-01 15:48:45,484] Pre-Condition - Step 02: Set Cookies and reload page<br/>
+                        [INFO ] [2022-12-07 14:11:14,304] Register - Step 02: Input FirstName to required field &apos;Thanh&apos;<br/>
 &lt;br&gt;<br />
-                        [INFO ] [2022-12-01 15:48:49,001] Pre-Condition - Step 03:&nbsp; Verify Login Success<br/>
+                        [INFO ] [2022-12-07 14:11:44,858] Login - Step 01: Navigate to Login Button<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-07 14:11:45,731] Login - Step 02: Input Not Found Email to Email Textbox &apos;abc9634@mail.com&apos;<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-07 14:11:46,145] Login - Step 03:&nbsp; Input Password TextBox &apos;123456&apos;<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-07 14:11:46,457] Login - Step 04:&nbsp; Click to Login Button<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-07 14:11:47,022] Login - Step 05:&nbsp; Verify Login Success<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-07 14:12:17,442] OS name = windows 10<br/>
+&lt;br&gt;<br />
+                        [INFO ] [2022-12-07 14:12:17,442] Driver instance name = chromedriver: chrome on windows (6aaf8dca91d340e156b8f701decb28eb)<br/>
 &lt;br&gt;<br />
             </div>
 
