--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,26 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f684e1">  <td>22/12/01 15:48:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Common_01_Cookies.Register(java.lang.String)[pri:0, instance:com.nopcommerce.common.Common_01_Cookies@60975100]">&gt;&gt;Register</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>18913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_19_Share_Data_C.Search_01_Empty_Data()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">Search_01_Empty_Data</td> 
-  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>19187</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_19_Share_Data_C.Search_02_Relative_Product_Name()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">Search_02_Relative_Product_Name</td> 
-  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>19198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_19_Share_Data_C.Search_03_Absolute_Product_Name()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">Search_03_Absolute_Product_Name</td> 
-  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>19211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_19_Share_Data_C.Search_04_Parent_Category()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">Search_04_Parent_Category</td> 
-  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>19218</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_19_Share_Data_C.Search_05_Incorect_Manufactorer()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">Search_05_Incorect_Manufactorer</td> 
-  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>19228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_19_Share_Data_C.Search_06_Corect_Manufactorer()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">Search_06_Corect_Manufactorer</td> 
-  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:49</td>   <td>19233</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_19_Share_Data_C.afterClass()[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f684e1">  <td>22/12/01 15:48:49</td>   <td>19438</td> <td>&nbsp;</td><td title="&lt;&lt;Common_01_Cookies.afterClass()[pri:0, instance:com.nopcommerce.common.Common_01_Cookies@60975100]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="f6ae66">  <td>22/12/01 15:48:42</td>   <td>11920</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_19_Share_Data_C.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_19_Share_Data_C@1253e7cb]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1389509050</td>   <td></td> </tr>
-<tr bgcolor="9daa8c">  <td>22/12/01 15:48:30</td>   <td>-21</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.common.Common_01_Cookies@60975100]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1389509050</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/07 14:58:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">User_01_Register</td> 
+  <td>main@1449605932</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/07 14:58:47</td>   <td>9287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">User_02_Login</td> 
+  <td>main@1449605932</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/07 14:58:55</td>   <td>17223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_21_Pattern_Object.afterClass()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1449605932</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/07 14:58:33</td>   <td>-5213</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_21_Pattern_Object.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1449605932</td>   <td></td> </tr>
+<tr bgcolor="83e0a2">  <td>22/12/07 14:58:33</td>   <td>-5281</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1449605932</td>   <td></td> </tr>
 </table>
