--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,7 +1,37 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-01 15:48:44,666] Pre-Condition - Step 01: Navigate to Login Button
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-07 14:58:38,512] Register - Step 01: Click to Register link
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-01 15:48:45,484] Pre-Condition - Step 02: Set Cookies and reload page
+<tr><td>[INFO ] [2022-12-07 14:58:41,126] Register - Step 02: Input FirstName to required field 'Thanh'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-01 15:48:49,001] Pre-Condition - Step 03:  Verify Login Success
+<tr><td>[INFO ] [2022-12-07 14:58:41,421] Register - Step 03: Input LastName to required field 'Nguyen'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:42,445] Register - Step 04: Input Email to required field 'abc7234@mail.com'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:43,012] Register - Step 05: Input Password to required field '123456'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:43,346] Register - Step 06: Input Confirm Password to required field '123456'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:43,745] Register - Step 07: Click to Register Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:46,258] Register - Step 08: Verify Register Success Message
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:46,368] Register - Step 09: Click to Logout Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:47,657] Login - Step 01: Navigate to Login Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:48,680] Login - Step 02: Input Not Found Email to Email Textbox 'abc7234@mail.com'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:49,097] Login - Step 03:  Input Password TextBox '123456'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:49,385] Login - Step 04:  Click to Login Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:50,382] Login - Step 05:  Verify Login Success
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:50,668] Login - Step 06: Navigate to MyAccoutLink
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:55,436] Login - Step 07: Verify Login Success
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:55,589] OS name = windows 10
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-07 14:58:55,589] Driver instance name = chromedriver: chrome on windows (26ae1f1695f0df4992497c9e0e0a76f0)
 <br></td></tr>
 </table>
