--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,15 +9,29 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">NopCommerce</th></tr>
-<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">19,667</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">22,928</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.nopcommerce.user.Level_19_Share_Data_C</td><td><a href="#m0">Search_01_Empty_Data</a></td><td rowspan="1">1669884529143</td><td rowspan="1">125</td></tr><tr class="passedeven"><td><a href="#m1">Search_02_Relative_Product_Name</a></td><td rowspan="1">1669884529417</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m2">Search_03_Absolute_Product_Name</a></td><td rowspan="1">1669884529428</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m3">Search_04_Parent_Category</a></td><td rowspan="1">1669884529441</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">Search_05_Incorect_Manufactorer</a></td><td rowspan="1">1669884529448</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m5">Search_06_Corect_Manufactorer</a></td><td rowspan="1">1669884529458</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.nopcommerce.user.Level_21_Pattern_Object</td><td><a href="#m0">User_02_Login</a></td><td rowspan="1">1670399927650</td><td rowspan="1">7924</td></tr><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.nopcommerce.user.Level_21_Pattern_Object</td><td><a href="#m1">User_01_Register</a></td><td rowspan="1">1670399918363</td><td rowspan="1">9108</td></tr></tbody>
 </table>
-<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_19_Share_Data_C#Search_01_Empty_Data</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nopcommerce.user.Level_19_Share_Data_C#Search_02_Relative_Product_Name</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.nopcommerce.user.Level_19_Share_Data_C#Search_03_Absolute_Product_Name</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.nopcommerce.user.Level_19_Share_Data_C#Search_04_Parent_Category</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.nopcommerce.user.Level_19_Share_Data_C#Search_05_Incorect_Manufactorer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.nopcommerce.user.Level_19_Share_Data_C#Search_06_Corect_Manufactorer</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_21_Pattern_Object#User_02_Login</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-12-07 14:58:47,657] Login - Step 01: Navigate to Login Button
+<br><br/>[INFO ] [2022-12-07 14:58:48,680] Login - Step 02: Input Not Found Email to Email Textbox 'abc7234@mail.com'
+<br><br/>[INFO ] [2022-12-07 14:58:49,097] Login - Step 03:  Input Password TextBox '123456'
+<br><br/>[INFO ] [2022-12-07 14:58:49,385] Login - Step 04:  Click to Login Button
+<br><br/>[INFO ] [2022-12-07 14:58:50,382] Login - Step 05:  Verify Login Success
+<br><br/>[INFO ] [2022-12-07 14:58:50,668] Login - Step 06: Navigate to MyAccoutLink
+<br><br/>[INFO ] [2022-12-07 14:58:55,436] Login - Step 07: Verify Login Success
+<br></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [false] but found [true]
+	at com.nopcommerce.user.Level_21_Pattern_Object.User_02_Login(Level_21_Pattern_Object.java:104)
+... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.nopcommerce.user.Level_21_Pattern_Object#User_01_Register</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-12-07 14:58:38,512] Register - Step 01: Click to Register link
+<br><br/>[INFO ] [2022-12-07 14:58:41,126] Register - Step 02: Input FirstName to required field 'Thanh'
+<br><br/>[INFO ] [2022-12-07 14:58:41,421] Register - Step 03: Input LastName to required field 'Nguyen'
+<br><br/>[INFO ] [2022-12-07 14:58:42,445] Register - Step 04: Input Email to required field 'abc7234@mail.com'
+<br><br/>[INFO ] [2022-12-07 14:58:43,012] Register - Step 05: Input Password to required field '123456'
+<br><br/>[INFO ] [2022-12-07 14:58:43,346] Register - Step 06: Input Confirm Password to required field '123456'
+<br><br/>[INFO ] [2022-12-07 14:58:43,745] Register - Step 07: Click to Register Button
+<br><br/>[INFO ] [2022-12-07 14:58:46,258] Register - Step 08: Verify Register Success Message
+<br><br/>[INFO ] [2022-12-07 14:58:46,368] Register - Step 09: Click to Logout Button
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
