--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bc9c91">  <td>22/12/07 14:58:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">User_01_Register</td> 
-  <td>main@1449605932</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/07 14:58:47</td>   <td>9287</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">User_02_Login</td> 
-  <td>main@1449605932</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/07 14:58:55</td>   <td>17223</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_21_Pattern_Object.afterClass()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1449605932</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/07 14:58:33</td>   <td>-5213</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_21_Pattern_Object.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1449605932</td>   <td></td> </tr>
-<tr bgcolor="83e0a2">  <td>22/12/07 14:58:33</td>   <td>-5281</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@20ca951f]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1449605932</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/08 10:15:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">User_01_Register</td> 
+  <td>main@664186542</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/08 10:15:41</td>   <td>8181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">User_02_Login</td> 
+  <td>main@664186542</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/08 10:15:46</td>   <td>13283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">User_03_My_Account</td> 
+  <td>main@664186542</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/08 10:15:47</td>   <td>14134</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_21_Pattern_Object.afterClass()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664186542</td>   <td></td> </tr>
+<tr bgcolor="bc9c91">  <td>22/12/08 10:15:27</td>   <td>-5119</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_21_Pattern_Object.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664186542</td>   <td></td> </tr>
+<tr bgcolor="83e0a2">  <td>22/12/08 10:15:27</td>   <td>-5152</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664186542</td>   <td></td> </tr>
 </table>
