--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-NopCommerce" class="navigator-link">
-              <span class="suite-name border-failed">NopCommerce</span>
+              <span class="suite-name border-passed">NopCommerce</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-NopCommerce" class="hide-methods failed suite-NopCommerce"> (hide)</a> <!-- hide-methods failed suite-NopCommerce -->
-                      <a href="#" panel-name="suite-NopCommerce" class="show-methods failed suite-NopCommerce"> (show)</a> <!-- show-methods failed suite-NopCommerce -->
-                    </span>
-                    <div class="method-list-content failed suite-NopCommerce">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_21_Pattern_Object" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-NopCommerce -->
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -117,6 +103,16 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_21_Pattern_Object" class="method navigator-link" hash-for-method="User_01_Register">User_01_Register</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_21_Pattern_Object" class="method navigator-link" hash-for-method="User_02_Login">User_02_Login</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-NopCommerce" title="com.nopcommerce.user.Level_21_Pattern_Object" class="method navigator-link" hash-for-method="User_03_My_Account">User_03_My_Account</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-NopCommerce -->
@@ -131,25 +127,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-NopCommerce" class="panel NopCommerce">
-          <div class="suite-NopCommerce-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.nopcommerce.user.Level_21_Pattern_Object</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="User_02_Login">
-                  </a> <!-- User_02_Login -->
-                  <span class="method-name">User_02_Login</span>
-                  <div class="stack-trace">java.lang.AssertionError: expected [false] but found [true]
-	at com.nopcommerce.user.Level_21_Pattern_Object.User_02_Login(Level_21_Pattern_Object.java:104)
-... Removed 29 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-NopCommerce-class-failed -->
           <div class="suite-NopCommerce-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -161,6 +138,20 @@
                   <a name="User_01_Register">
                   </a> <!-- User_01_Register -->
                   <span class="method-name">User_01_Register</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="User_02_Login">
+                  </a> <!-- User_02_Login -->
+                  <span class="method-name">User_02_Login</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="User_03_My_Account">
+                  </a> <!-- User_03_My_Account -->
+                  <span class="method-name">User_03_My_Account</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -218,20 +209,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_21_Pattern_Object')
-data.setCell(0, 3, 9108);
+data.setCell(0, 3, 8043);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_21_Pattern_Object')
-data.setCell(1, 3, 7924);
+data.setCell(1, 3, 5096);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'User_03_My_Account')
+data.setCell(2, 2, 'com.nopcommerce.user.Level_21_Pattern_Object')
+data.setCell(2, 3, 848);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -243,44 +238,59 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">User_01_Register</span>
+              <span class="reporter-method-name">User_03_My_Account</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:38,512] Register - Step 01: Click to Register link
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,336] My Account - Step 01: Navigate to MyAccoutLink
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:41,126] Register - Step 02: Input FirstName to required field 'Thanh'
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,835] My Account - Step 02: Verify Login Success
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:41,421] Register - Step 03: Input LastName to required field 'Nguyen'
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,926] My Account - Step 03: Verify FirstName value is correctly
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:42,445] Register - Step 04: Input Email to required field 'abc7234@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:47,010] My Account - Step 04: Verify LastName value is correctly
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:43,012] Register - Step 05: Input Password to required field '123456'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:43,346] Register - Step 06: Input Confirm Password to required field '123456'
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:43,745] Register - Step 07: Click to Register Button
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:46,258] Register - Step 08: Verify Register Success Message
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:46,368] Register - Step 09: Click to Logout Button
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:47,095] My Account - Step 05: Verify Email value is correctly
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_02_Login</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:47,657] Login - Step 01: Navigate to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:41,235] Login - Step 01: Navigate to Login Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:48,680] Login - Step 02: Input Not Found Email to Email Textbox 'abc7234@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:43,047] Login - Step 02: Input Not Found Email to Email Textbox 'abc3819@mail.com'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:49,097] Login - Step 03:  Input Password TextBox '123456'
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:43,378] Login - Step 03:  Input Password TextBox '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:49,385] Login - Step 04:  Click to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:43,619] Login - Step 04:  Click to Login Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:50,382] Login - Step 05:  Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:44,506] Login - Step 05:  Verify Login Success
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:50,668] Login - Step 06: Navigate to MyAccoutLink
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:44,778] Login - Step 06: Navigate to MyAccoutLink
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-07 14:58:55,436] Login - Step 07: Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,233] Login - Step 07: Verify Login Success
+<br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">User_01_Register</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:33,168] Register - Step 01: Click to Register link
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:35,424] Register - Step 02: Input FirstName to required field 'Thanh'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:35,694] Register - Step 03: Input LastName to required field 'Nguyen'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:36,659] Register - Step 04: Input Email to required field 'abc3819@mail.com'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:37,165] Register - Step 05: Input Password to required field '123456'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:37,482] Register - Step 06: Input Confirm Password to required field '123456'
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:37,777] Register - Step 07: Click to Register Button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:40,061] Register - Step 08: Verify Register Success Message
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:40,178] Register - Step 09: Click to Logout Button
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
@@ -306,21 +316,23 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">70 ms</span>
+                <span class="method-start">34 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">5289 ms</span>
+                <span class="method-start">5156 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">14576 ms</span>
+                <span class="method-start">13337 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">User_03_My_Account</span>
+                <span class="method-start">18439 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">22511 ms</span>
+                <span class="method-start">19290 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
