--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,37 +1,47 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-07 14:58:38,512] Register - Step 01: Click to Register link
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-08 10:15:33,168] Register - Step 01: Click to Register link
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:41,126] Register - Step 02: Input FirstName to required field 'Thanh'
+<tr><td>[INFO ] [2022-12-08 10:15:35,424] Register - Step 02: Input FirstName to required field 'Thanh'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:41,421] Register - Step 03: Input LastName to required field 'Nguyen'
+<tr><td>[INFO ] [2022-12-08 10:15:35,694] Register - Step 03: Input LastName to required field 'Nguyen'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:42,445] Register - Step 04: Input Email to required field 'abc7234@mail.com'
+<tr><td>[INFO ] [2022-12-08 10:15:36,659] Register - Step 04: Input Email to required field 'abc3819@mail.com'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:43,012] Register - Step 05: Input Password to required field '123456'
+<tr><td>[INFO ] [2022-12-08 10:15:37,165] Register - Step 05: Input Password to required field '123456'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:43,346] Register - Step 06: Input Confirm Password to required field '123456'
+<tr><td>[INFO ] [2022-12-08 10:15:37,482] Register - Step 06: Input Confirm Password to required field '123456'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:43,745] Register - Step 07: Click to Register Button
+<tr><td>[INFO ] [2022-12-08 10:15:37,777] Register - Step 07: Click to Register Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:46,258] Register - Step 08: Verify Register Success Message
+<tr><td>[INFO ] [2022-12-08 10:15:40,061] Register - Step 08: Verify Register Success Message
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:46,368] Register - Step 09: Click to Logout Button
+<tr><td>[INFO ] [2022-12-08 10:15:40,178] Register - Step 09: Click to Logout Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:47,657] Login - Step 01: Navigate to Login Button
+<tr><td>[INFO ] [2022-12-08 10:15:41,235] Login - Step 01: Navigate to Login Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:48,680] Login - Step 02: Input Not Found Email to Email Textbox 'abc7234@mail.com'
+<tr><td>[INFO ] [2022-12-08 10:15:43,047] Login - Step 02: Input Not Found Email to Email Textbox 'abc3819@mail.com'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:49,097] Login - Step 03:  Input Password TextBox '123456'
+<tr><td>[INFO ] [2022-12-08 10:15:43,378] Login - Step 03:  Input Password TextBox '123456'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:49,385] Login - Step 04:  Click to Login Button
+<tr><td>[INFO ] [2022-12-08 10:15:43,619] Login - Step 04:  Click to Login Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:50,382] Login - Step 05:  Verify Login Success
+<tr><td>[INFO ] [2022-12-08 10:15:44,506] Login - Step 05:  Verify Login Success
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:50,668] Login - Step 06: Navigate to MyAccoutLink
+<tr><td>[INFO ] [2022-12-08 10:15:44,778] Login - Step 06: Navigate to MyAccoutLink
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:55,436] Login - Step 07: Verify Login Success
+<tr><td>[INFO ] [2022-12-08 10:15:46,233] Login - Step 07: Verify Login Success
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:55,589] OS name = windows 10
+<tr><td>[INFO ] [2022-12-08 10:15:46,336] My Account - Step 01: Navigate to MyAccoutLink
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-07 14:58:55,589] Driver instance name = chromedriver: chrome on windows (26ae1f1695f0df4992497c9e0e0a76f0)
+<tr><td>[INFO ] [2022-12-08 10:15:46,835] My Account - Step 02: Verify Login Success
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-08 10:15:46,926] My Account - Step 03: Verify FirstName value is correctly
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-08 10:15:47,010] My Account - Step 04: Verify LastName value is correctly
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-08 10:15:47,095] My Account - Step 05: Verify Email value is correctly
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-08 10:15:47,184] OS name = windows 10
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-08 10:15:47,185] Driver instance name = chromedriver: chrome on windows (84b706e2531248771b9e88af61da4ff0)
 <br></td></tr>
 </table>
