--- a/test-output/index.html
+++ b/test-output/index.html
@@ -167,7 +167,7 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;NopCommerce&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.nopcommerce.user.Level_21_Pattern_Object&quot;/&gt;
     &lt;/classes&gt;
@@ -213,20 +213,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'User_01_Register')
 data.setCell(0, 2, 'com.nopcommerce.user.Level_21_Pattern_Object')
-data.setCell(0, 3, 8043);
+data.setCell(0, 3, 6001);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'User_02_Login')
 data.setCell(1, 2, 'com.nopcommerce.user.Level_21_Pattern_Object')
-data.setCell(1, 3, 5096);
+data.setCell(1, 3, 3315);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'User_03_My_Account')
 data.setCell(2, 2, 'com.nopcommerce.user.Level_21_Pattern_Object')
-data.setCell(2, 3, 848);
+data.setCell(2, 3, 714);
 window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 13 seconds</span>
+              <span class="suite-total-time">Total running time: 10 seconds</span>
               <div id="times-div-NopCommerce">
               </div> <!-- times-div-NopCommerce -->
             </div> <!-- times-div -->
@@ -238,59 +238,59 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">User_03_My_Account</span>
+              <span class="reporter-method-name">User_02_Login</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,336] My Account - Step 01: Navigate to MyAccoutLink
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:11,338] Login - Step 01: Navigate to Login Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,835] My Account - Step 02: Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:12,220] Login - Step 02: Input Not Found Email to Email Textbox 'abc9543@mail.com'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,926] My Account - Step 03: Verify FirstName value is correctly
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:12,350] Login - Step 03:  Input Password TextBox '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:47,010] My Account - Step 04: Verify LastName value is correctly
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:12,432] Login - Step 04:  Click to Login Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:47,095] My Account - Step 05: Verify Email value is correctly
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:13,566] Login - Step 05:  Verify Login Success
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:13,766] Login - Step 06: Navigate to MyAccoutLink
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:14,567] Login - Step 07: Verify Login Success
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
-              <span class="reporter-method-name">User_02_Login</span>
+              <span class="reporter-method-name">User_03_My_Account</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:41,235] Login - Step 01: Navigate to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:14,657] My Account - Step 01: Navigate to MyAccoutLink
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:43,047] Login - Step 02: Input Not Found Email to Email Textbox 'abc3819@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:15,147] My Account - Step 02: Verify Login Success
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:43,378] Login - Step 03:  Input Password TextBox '123456'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:15,219] My Account - Step 03: Verify FirstName value is correctly
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:43,619] Login - Step 04:  Click to Login Button
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:15,264] My Account - Step 04: Verify LastName value is correctly
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:44,506] Login - Step 05:  Verify Login Success
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:44,778] Login - Step 06: Navigate to MyAccoutLink
-<br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:46,233] Login - Step 07: Verify Login Success
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:15,316] My Account - Step 05: Verify Email value is correctly
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">User_01_Register</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:33,168] Register - Step 01: Click to Register link
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:05,299] Register - Step 01: Click to Register link
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:35,424] Register - Step 02: Input FirstName to required field 'Thanh'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:07,037] Register - Step 02: Input FirstName to required field 'Thanh'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:35,694] Register - Step 03: Input LastName to required field 'Nguyen'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:07,204] Register - Step 03: Input LastName to required field 'Nguyen'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:36,659] Register - Step 04: Input Email to required field 'abc3819@mail.com'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:08,332] Register - Step 04: Input Email to required field 'abc9543@mail.com'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:37,165] Register - Step 05: Input Password to required field '123456'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:08,492] Register - Step 05: Input Password to required field '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:37,482] Register - Step 06: Input Confirm Password to required field '123456'
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:08,572] Register - Step 06: Input Confirm Password to required field '123456'
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:37,777] Register - Step 07: Click to Register Button
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:08,639] Register - Step 07: Click to Register Button
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:40,061] Register - Step 08: Verify Register Success Message
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:10,190] Register - Step 08: Verify Register Success Message
 <br></span>
-                <span class="reporter-method-output">[INFO ] [2022-12-08 10:15:40,178] Register - Step 09: Click to Logout Button
+                <span class="reporter-method-output">[INFO ] [2022-12-14 14:56:10,269] Register - Step 09: Click to Logout Button
 <br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
@@ -315,24 +315,24 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(chrome)</span>
-                <span class="method-start">34 ms</span>
+                <span class="method-name">beforeClass(firefox)</span>
+                <span class="method-start">35 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">User_01_Register</span>
-                <span class="method-start">5156 ms</span>
+                <span class="method-start">6269 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">User_02_Login</span>
-                <span class="method-start">13337 ms</span>
+                <span class="method-start">12444 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">User_03_My_Account</span>
-                <span class="method-start">18439 ms</span>
+                <span class="method-start">15767 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">19290 ms</span>
+                <span class="method-start">16484 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
