--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,43 +1,11 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-14 14:56:05,299] Register - Step 01: Click to Register link
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-19 14:47:32,021] Register - Step 01: Click to Register link
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:07,037] Register - Step 02: Input FirstName to required field 'Thanh'
+<tr><td>[INFO ] [2022-12-19 14:48:02,465] Login - Step 01: Navigate to Login Button
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:07,204] Register - Step 03: Input LastName to required field 'Nguyen'
+<tr><td>[INFO ] [2022-12-19 14:48:32,514] My Account - Step 01: Navigate to MyAccoutLink
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:08,332] Register - Step 04: Input Email to required field 'abc9543@mail.com'
+<tr><td>[INFO ] [2022-12-19 14:49:02,751] OS name = windows 10
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:08,492] Register - Step 05: Input Password to required field '123456'
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:08,572] Register - Step 06: Input Confirm Password to required field '123456'
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:08,639] Register - Step 07: Click to Register Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:10,190] Register - Step 08: Verify Register Success Message
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:10,269] Register - Step 09: Click to Logout Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:11,338] Login - Step 01: Navigate to Login Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:12,220] Login - Step 02: Input Not Found Email to Email Textbox 'abc9543@mail.com'
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:12,350] Login - Step 03:  Input Password TextBox '123456'
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:12,432] Login - Step 04:  Click to Login Button
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:13,566] Login - Step 05:  Verify Login Success
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:13,766] Login - Step 06: Navigate to MyAccoutLink
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:14,567] Login - Step 07: Verify Login Success
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:14,657] My Account - Step 01: Navigate to MyAccoutLink
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:15,147] My Account - Step 02: Verify Login Success
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:15,219] My Account - Step 03: Verify FirstName value is correctly
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:15,264] My Account - Step 04: Verify LastName value is correctly
-<br></td></tr>
-<tr><td>[INFO ] [2022-12-14 14:56:15,316] My Account - Step 05: Verify Email value is correctly
+<tr><td>[INFO ] [2022-12-19 14:49:02,752] Driver instance name = internetexplorerdriver: internet explorer on windows (7b8b5ca2-76e8-499b-ad1c-fbe5b0a9bedd)
 <br></td></tr>
 </table>
