--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,13 +8,33 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">SauceLab - Sort</th></tr>
-<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">8,069</td><td></td><td></td></tr>
+<tr><th colspan="7">NopCommerce</th></tr>
+<tr><td><a href="#t0">Run on Firefox</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">12,597</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SauceLab - Sort</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.saucelab.sort.Level_22_Sort_Asc_Desc</td><td><a href="#m0">Sort_01_Name</a></td><td rowspan="1">1671781169612</td><td rowspan="1">1140</td></tr><tr class="passedeven"><td><a href="#m1">Sort_02_Price</a></td><td rowspan="1">1671781170933</td><td rowspan="1">1110</td></tr><tr class="passedeven"><td><a href="#m2">User_03_My_Account</a></td><td rowspan="1">1671781172051</td><td rowspan="1">6</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">NopCommerce</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Firefox &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.nopcommerce.user.Level_23_Fake_Data</td><td><a href="#m0">User_01_Register</a></td><td rowspan="1">1672215987401</td><td rowspan="1">3889</td></tr><tr class="passedeven"><td><a href="#m1">User_02_Login</a></td><td rowspan="1">1672215991370</td><td rowspan="1">3079</td></tr><tr class="passedeven"><td><a href="#m2">User_03_My_Account</a></td><td rowspan="1">1672215994453</td><td rowspan="1">876</td></tr></tbody>
 </table>
-<h2>Run on Chrome</h2><h3 id="m0">com.saucelab.sort.Level_22_Sort_Asc_Desc#Sort_01_Name</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.saucelab.sort.Level_22_Sort_Asc_Desc#Sort_02_Price</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.saucelab.sort.Level_22_Sort_Asc_Desc#User_03_My_Account</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Firefox</h2><h3 id="m0">com.nopcommerce.user.Level_23_Fake_Data#User_01_Register</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-12-28 15:26:27,482] Register - Step 01: Click to Register link
+<br><br/>[INFO ] [2022-12-28 15:26:28,337] Register - Step 02: Input FirstName to required field 'Stephanie'
+<br><br/>[INFO ] [2022-12-28 15:26:28,569] Register - Step 03: Input LastName to required field 'Kris'
+<br><br/>[INFO ] [2022-12-28 15:26:29,320] Register - Step 04: Input Email to required field 'dwain.schmeler@gmail.com'
+<br><br/>[INFO ] [2022-12-28 15:26:29,701] Register - Step 05: Input Password to required field 'rql66w9amees7'
+<br><br/>[INFO ] [2022-12-28 15:26:29,942] Register - Step 06: Input Confirm Password to required field 'rql66w9amees7'
+<br><br/>[INFO ] [2022-12-28 15:26:30,178] Register - Step 07: Click to Register Button
+<br><br/>[INFO ] [2022-12-28 15:26:31,209] Register - Step 08: Verify Register Success Message
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.nopcommerce.user.Level_23_Fake_Data#User_02_Login</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-12-28 15:26:31,374] Login - Step 01: Navigate to Login Button
+<br><br/>[INFO ] [2022-12-28 15:26:31,955] Login - Step 02: Input Not Found Email to Email Textbox 'dwain.schmeler@gmail.com'
+<br><br/>[INFO ] [2022-12-28 15:26:32,262] Login - Step 03:  Input Password TextBox 'rql66w9amees7'
+<br><br/>[INFO ] [2022-12-28 15:26:32,515] Login - Step 04:  Click to Login Button
+<br><br/>[INFO ] [2022-12-28 15:26:33,597] Login - Step 05:  Verify Login Success
+<br><br/>[INFO ] [2022-12-28 15:26:33,790] Login - Step 06: Navigate to MyAccoutLink
+<br><br/>[INFO ] [2022-12-28 15:26:34,375] Login - Step 07: Verify Login Success
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.nopcommerce.user.Level_23_Fake_Data#User_03_My_Account</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2022-12-28 15:26:34,456] My Account - Step 01: Navigate to MyAccoutLink
+<br><br/>[INFO ] [2022-12-28 15:26:35,022] My Account - Step 02: Verify Login Success
+<br><br/>[INFO ] [2022-12-28 15:26:35,097] My Account - Step 03: Verify FirstName value is correctly
+<br><br/>[INFO ] [2022-12-28 15:26:35,174] My Account - Step 04: Verify LastName value is correctly
+<br><br/>[INFO ] [2022-12-28 15:26:35,252] My Account - Step 05: Verify Email value is correctly
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
