--- a/test-output/old/NopCommerce/reporter-output.html
+++ b/test-output/old/NopCommerce/reporter-output.html
@@ -1,11 +1,45 @@
-<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-19 14:47:32,021] Register - Step 01: Click to Register link
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2022-12-28 15:26:27,482] Register - Step 01: Click to Register link
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-19 14:48:02,465] Login - Step 01: Navigate to Login Button
+<tr><td>[INFO ] [2022-12-28 15:26:28,337] Register - Step 02: Input FirstName to required field 'Stephanie'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-19 14:48:32,514] My Account - Step 01: Navigate to MyAccoutLink
+<tr><td>[INFO ] [2022-12-28 15:26:28,569] Register - Step 03: Input LastName to required field 'Kris'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-19 14:49:02,751] OS name = windows 10
+<tr><td>[INFO ] [2022-12-28 15:26:29,320] Register - Step 04: Input Email to required field 'dwain.schmeler@gmail.com'
 <br></td></tr>
-<tr><td>[INFO ] [2022-12-19 14:49:02,752] Driver instance name = internetexplorerdriver: internet explorer on windows (7b8b5ca2-76e8-499b-ad1c-fbe5b0a9bedd)
+<tr><td>[INFO ] [2022-12-28 15:26:29,701] Register - Step 05: Input Password to required field 'rql66w9amees7'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:29,942] Register - Step 06: Input Confirm Password to required field 'rql66w9amees7'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:30,178] Register - Step 07: Click to Register Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:31,209] Register - Step 08: Verify Register Success Message
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:31,374] Login - Step 01: Navigate to Login Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:31,955] Login - Step 02: Input Not Found Email to Email Textbox 'dwain.schmeler@gmail.com'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:32,262] Login - Step 03:  Input Password TextBox 'rql66w9amees7'
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:32,515] Login - Step 04:  Click to Login Button
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:33,597] Login - Step 05:  Verify Login Success
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:33,790] Login - Step 06: Navigate to MyAccoutLink
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:34,375] Login - Step 07: Verify Login Success
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:34,456] My Account - Step 01: Navigate to MyAccoutLink
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:35,022] My Account - Step 02: Verify Login Success
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:35,097] My Account - Step 03: Verify FirstName value is correctly
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:35,174] My Account - Step 04: Verify LastName value is correctly
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:35,252] My Account - Step 05: Verify Email value is correctly
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:35,332] OS name = windows 10
+<br></td></tr>
+<tr><td>[INFO ] [2022-12-28 15:26:35,332] Driver instance name = chromedriver: chrome on windows (8047b48c754fb34948a6ae49d8cb8a29)
 <br></td></tr>
 </table>
