--- a/test-output/old/NopCommerce/methods.html
+++ b/test-output/old/NopCommerce/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83e0a2">  <td>22/12/19 14:47:26</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664186542</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/19 14:47:26</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_21_Pattern_Object.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664186542</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/19 14:47:31</td>   <td>5697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">User_01_Register</td> 
-  <td>main@664186542</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/19 14:48:02</td>   <td>36236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">User_02_Login</td> 
-  <td>main@664186542</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/19 14:48:32</td>   <td>66284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_21_Pattern_Object.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">User_03_My_Account</td> 
-  <td>main@664186542</td>   <td></td> </tr>
-<tr bgcolor="bc9c91">  <td>22/12/19 14:49:02</td>   <td>96525</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_21_Pattern_Object.afterClass()[pri:0, instance:com.nopcommerce.user.Level_21_Pattern_Object@2d778add]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@664186542</td>   <td></td> </tr>
+<tr bgcolor="afbea5">  <td>22/12/28 15:26:23</td>   <td>0</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="919693">  <td>22/12/28 15:26:23</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_23_Fake_Data.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="919693">  <td>22/12/28 15:26:27</td>   <td>4348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_23_Fake_Data.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">User_01_Register</td> 
+  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="919693">  <td>22/12/28 15:26:31</td>   <td>8317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_23_Fake_Data.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">User_02_Login</td> 
+  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="919693">  <td>22/12/28 15:26:34</td>   <td>11399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_23_Fake_Data.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">User_03_My_Account</td> 
+  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="919693">  <td>22/12/28 15:26:35</td>   <td>12278</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_23_Fake_Data.afterClass()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
 </table>
