--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.Level_07_Switch_Page</td>
+<td>com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,14 +12,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>User_02_Login</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>User_05_Switch_Role</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>User_04_Switch_Page</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
