--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,5 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2023-01-10 14:59:49,172] OS name = windows 10
+<br></td></tr>
+<tr><td>[INFO ] [2023-01-10 14:59:49,173] Cannot invoke "Object.toString()" because "this.driver" is null
+<br></td></tr>
+</table>
