--- a/test-output/old/NopCommerce/classes.html
+++ b/test-output/old/NopCommerce/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.nopcommerce.user.Level_23_Fake_Data</td>
+<td>com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
