--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_01_Register</td> 
-  <td>main@815320891</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_02_Login</td> 
-  <td>main@815320891</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_03_My_Account</td> 
-  <td>main@815320891</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_04_Switch_Page()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_04_Switch_Page</td> 
-  <td>main@815320891</td>   <td></td> </tr>
-<tr bgcolor="83df68">  <td>22/10/11 21:47:16</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_07_Switch_Page.User_05_Switch_Role()[pri:0, instance:com.nopcommerce.user.Level_07_Switch_Page@7817fd62]">User_05_Switch_Role</td> 
-  <td>main@815320891</td>   <td></td> </tr>
+<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">User_01_Register</td> 
+  <td>main@1961129028</td>   <td></td> </tr>
+<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">User_02_Login</td> 
+  <td>main@1961129028</td>   <td></td> </tr>
+<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">User_03_My_Account</td> 
+  <td>main@1961129028</td>   <td></td> </tr>
+<tr bgcolor="8caefb">  <td>23/01/10 14:59:49</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_24_Multiple_Enviroment_Owner.afterClass()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961129028</td>   <td></td> </tr>
+<tr bgcolor="6b78a6">  <td>23/01/10 14:59:48</td>   <td>-182</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@2dbf4cbd]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1961129028</td>   <td></td> </tr>
 </table>
