--- a/test-output/old/NopCommerce/methods-alphabetical.html
+++ b/test-output/old/NopCommerce/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>NopCommerce</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="919693">  <td>22/12/28 15:26:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_23_Fake_Data.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">User_01_Register</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="919693">  <td>22/12/28 15:26:31</td>   <td>3969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_23_Fake_Data.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">User_02_Login</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="919693">  <td>22/12/28 15:26:34</td>   <td>7051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_23_Fake_Data.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">User_03_My_Account</td> 
-  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="919693">  <td>22/12/28 15:26:35</td>   <td>7930</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_23_Fake_Data.afterClass()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="919693">  <td>22/12/28 15:26:23</td>   <td>-4318</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_23_Fake_Data.beforeClass(java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
-<tr bgcolor="afbea5">  <td>22/12/28 15:26:23</td>   <td>-4348</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_23_Fake_Data@51133c06]">&gt;&gt;initBeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1075803699</td>   <td></td> </tr>
+<tr bgcolor="c19a70">  <td>23/01/10 15:14:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_01_Register()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@291f18]">User_01_Register</td> 
+  <td>main@1192672907</td>   <td></td> </tr>
+<tr bgcolor="c19a70">  <td>23/01/10 15:14:10</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_02_Login()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@291f18]">User_02_Login</td> 
+  <td>main@1192672907</td>   <td></td> </tr>
+<tr bgcolor="c19a70">  <td>23/01/10 15:14:10</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_24_Multiple_Enviroment_Owner.User_03_My_Account()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@291f18]">User_03_My_Account</td> 
+  <td>main@1192672907</td>   <td></td> </tr>
+<tr bgcolor="c19a70">  <td>23/01/10 15:14:10</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_24_Multiple_Enviroment_Owner.afterClass()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@291f18]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192672907</td>   <td></td> </tr>
+<tr bgcolor="c19a70">  <td>23/01/10 15:14:08</td>   <td>-2524</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_24_Multiple_Enviroment_Owner.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@291f18]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192672907</td>   <td></td> </tr>
+<tr bgcolor="b8859c">  <td>23/01/10 15:14:08</td>   <td>-2555</td> <td title="&gt;&gt;BaseTestJquery.initBeforeSuite()[pri:0, instance:com.nopcommerce.user.Level_24_Multiple_Enviroment_Owner@291f18]">&gt;&gt;initBeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192672907</td>   <td></td> </tr>
 </table>
