--- a/test-output/index.html
+++ b/test-output/index.html
@@ -239,17 +239,17 @@ data.addRows(5);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Post_01_Create_New_Post')
 data.setCell(0, 2, 'com.wordpress.posts.Post_01_Create_Read_Update_Delete')
-data.setCell(0, 3, 22356);
+data.setCell(0, 3, 8062);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Post_02_Search_Post')
 data.setCell(1, 2, 'com.wordpress.posts.Post_01_Create_Read_Update_Delete')
-data.setCell(1, 3, 2091);
+data.setCell(1, 3, 1349);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Post_05_Delete_Post')
+data.setCell(2, 1, 'Post_04_Edit_Post')
 data.setCell(2, 2, 'com.wordpress.posts.Post_01_Create_Read_Update_Delete')
-data.setCell(2, 3, 2);
+data.setCell(2, 3, 3);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Post_04_Edit_Post')
+data.setCell(3, 1, 'Post_05_Delete_Post')
 data.setCell(3, 2, 'com.wordpress.posts.Post_01_Create_Read_Update_Delete')
 data.setCell(3, 3, 2);
 data.setCell(4, 0, 4)
@@ -260,7 +260,7 @@ window.suiteTableData['WordPress_-_Admin']= { tableData: data, tableDiv: 'times-
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-WordPress_-_Admin">
               </div> <!-- times-div-WordPress_-_Admin -->
             </div> <!-- times-div -->
@@ -271,6 +271,34 @@ return data;
             <span class="header-content">Reporter output for WordPress - Admin</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Post_01_Create_New_Post</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:14,346] Create_Post - Step 01: Click to 'Posts' menu Link
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:15,468] Create_Post - Step 02: Get 'Search Post' Page URL
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:15,473] Create_Post - Step 02: Click to 'Add New' button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:17,791] Create_Post - Step 03: Enter to post title
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:18,413] Create_Post - Step 04: Enter to body
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:20,933] Create_Post - Step 05: Click to 'Publish' button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:21,069] Create_Post - Step 07: Click to 'Publish Verify'button
+<br></span>
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:21,196] Create_Post - Step 08: Verify 'Post published' message is displayed
+<br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">Post_02_Search_Post</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">[INFO ] [2023-03-20 20:57:22,414] Search_Post - Step 01: Open 'Search Post' page
+<br></span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-WordPress_-_Admin" class="panel">
@@ -293,31 +321,31 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">beforeClass(chrome, https://localhost/wp-admin/)</span>
-                <span class="method-start">20 ms</span>
+                <span class="method-start">21 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Post_01_Create_New_Post</span>
-                <span class="method-start">9440 ms</span>
+                <span class="method-start">9347 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Post_02_Search_Post</span>
-                <span class="method-start">31845 ms</span>
+                <span class="method-start">17458 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Post_03_View_Post</span>
-                <span class="method-start">33938 ms</span>
+                <span class="method-start">18810 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Post_04_Edit_Post</span>
-                <span class="method-start">33941 ms</span>
+                <span class="method-start">18813 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Post_05_Delete_Post</span>
-                <span class="method-start">33944 ms</span>
+                <span class="method-start">18817 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">33947 ms</span>
+                <span class="method-start">18821 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
