--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,21 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">WordPress - Admin</th></tr>
-<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">34,766</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Run on Chrome</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">19,864</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">WordPress - Admin</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.wordpress.posts.Post_01_Create_Read_Update_Delete</td><td><a href="#m0">Post_01_Create_New_Post</a></td><td rowspan="1">1677712575387</td><td rowspan="1">22356</td></tr><tr class="passedeven"><td><a href="#m1">Post_02_Search_Post</a></td><td rowspan="1">1677712597792</td><td rowspan="1">2091</td></tr><tr class="passedeven"><td><a href="#m2">Post_03_View_Post</a></td><td rowspan="1">1677712599885</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">Post_04_Edit_Post</a></td><td rowspan="1">1677712599888</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m4">Post_05_Delete_Post</a></td><td rowspan="1">1677712599891</td><td rowspan="1">2</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">WordPress - Admin</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Run on Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.wordpress.posts.Post_01_Create_Read_Update_Delete</td><td><a href="#m0">Post_01_Create_New_Post</a></td><td rowspan="1">1679320634300</td><td rowspan="1">8062</td></tr><tr class="passedeven"><td><a href="#m1">Post_02_Search_Post</a></td><td rowspan="1">1679320642411</td><td rowspan="1">1349</td></tr><tr class="passedeven"><td><a href="#m2">Post_03_View_Post</a></td><td rowspan="1">1679320643763</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">Post_04_Edit_Post</a></td><td rowspan="1">1679320643766</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m4">Post_05_Delete_Post</a></td><td rowspan="1">1679320643770</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Run on Chrome</h2><h3 id="m0">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_01_Create_New_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_02_Search_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Run on Chrome</h2><h3 id="m0">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_01_Create_New_Post</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2023-03-20 20:57:14,346] Create_Post - Step 01: Click to 'Posts' menu Link
+<br><br/>[INFO ] [2023-03-20 20:57:15,468] Create_Post - Step 02: Get 'Search Post' Page URL
+<br><br/>[INFO ] [2023-03-20 20:57:15,473] Create_Post - Step 02: Click to 'Add New' button
+<br><br/>[INFO ] [2023-03-20 20:57:17,791] Create_Post - Step 03: Enter to post title
+<br><br/>[INFO ] [2023-03-20 20:57:18,413] Create_Post - Step 04: Enter to body
+<br><br/>[INFO ] [2023-03-20 20:57:20,933] Create_Post - Step 05: Click to 'Publish' button
+<br><br/>[INFO ] [2023-03-20 20:57:21,069] Create_Post - Step 07: Click to 'Publish Verify'button
+<br><br/>[INFO ] [2023-03-20 20:57:21,196] Create_Post - Step 08: Verify 'Post published' message is displayed
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_02_Search_Post</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">[INFO ] [2023-03-20 20:57:22,414] Search_Post - Step 01: Open 'Search Post' page
+<br></div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_03_View_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_04_Edit_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">com.wordpress.posts.Post_01_Create_Read_Update_Delete#Post_05_Delete_Post</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
