--- a/test-output/old/WordPress - Admin/reporter-output.html
+++ b/test-output/old/WordPress - Admin/reporter-output.html
@@ -1,1 +1,31 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>[INFO ] [2023-03-20 20:57:04,977] Precondition - Step 01: Open Browser and adminUrl
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:11,882] Precondition - Step 02: Enter to Username textbox with value: automationfc
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:11,980] Precondition - Step 03: Enter to Password textbox with value: automationfc
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:12,071] Precondition - Step 04: Click to Login button 
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:14,346] Create_Post - Step 01: Click to 'Posts' menu Link
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:15,468] Create_Post - Step 02: Get 'Search Post' Page URL
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:15,473] Create_Post - Step 02: Click to 'Add New' button
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:17,791] Create_Post - Step 03: Enter to post title
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:18,413] Create_Post - Step 04: Enter to body
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:20,933] Create_Post - Step 05: Click to 'Publish' button
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:21,069] Create_Post - Step 07: Click to 'Publish Verify'button
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:21,196] Create_Post - Step 08: Verify 'Post published' message is displayed
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:22,414] Search_Post - Step 01: Open 'Search Post' page
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:23,775] OS name = windows 10
+<br></td></tr>
+<tr><td>[INFO ] [2023-03-20 20:57:23,775] Driver instance name = chromedriver: chrome on windows (297ce42ce976d9835f5d03e71c5cb25f)
+<br></td></tr>
+</table>
